# data-agent-console-platform

./: AGENTS.md  README.md  pyproject.toml
app/: __init__.py  cli.py  main.py
app/agents/: __init__.py  base.py  orchestrator.py  registry.py  specialized.py
app/audit/: __init__.py  logger.py
app/connectors/: __init__.py  base.py  factory.py  interfaces.py  mock_catalog.py  mock_warehouse.py  mocks.py  secrets.py  starrocks.py  stubs.py
app/core/: __init__.py  config.py  errors.py
app/data_qa/: __init__.py  models.py  orchestrator.py
app/domain/: __init__.py  approval.py  assets.py  audit.py  classification.py  common.py  identity.py  policy.py  tasks.py  tools.py
app/evals/: __init__.py  cases.py  graders.py  models.py  runner.py
app/hooks/: __init__.py  base.py  defaults.py  manager.py  types.py
console/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
docs/: api.md  architecture.md  audit.md  cli.md  code-review-stage17.md  connectors.md  data-qa-agent-product.md  data-tool-protocol.md  demo-order-domain.md  demo-walkthrough.md  domain-model.md  evaluation.md  governance-engine.md  governance-plan-mode.md  hooks.md  integration-plan.md  memory-and-compaction.md  policy-engine.md  security-hardening.md  sql-gateway.md  subagents.md
scripts/: demo_order_governance.py
tests/: test_demo_order_domain.py  test_dlp_masking.py  test_governance_tools.py  test_health.py  test_memory_store.py  test_policy_engine.py  test_project_structure.py  test_runtime_security.py  test_sql_gateway.py
(+91 files in other folders)
