[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-governance-agent-runtime"
version = "0.1.0"
description = "Enterprise Data Governance Agent Runtime with policy-gated DataTool execution."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
datagent = "app.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "src/data_governance_agent_runtime"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["app", "src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
